# threat-modeling-ai

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.ollama.yml  docker-compose.yml  pyproject.toml  requirements.txt
backend/: Dockerfile  entrypoint.sh  (+1 more)
threat-modeling-shared/: README.md  pyproject.toml
threat-modeling-shared/threat_modeling_shared/: __init__.py  cache.py  config.py  database.py  exceptions.py  logging.py  setup_api.py
threat-modeling-shared/threat_modeling_shared/middleware/: __init__.py  exceptions.py  logging_middleware.py
threat-modeling-shared/threat_modeling_shared/routers/: __init__.py  health.py
threat-service/: .gitignore  Dockerfile  Makefile  pyproject.toml  requirements-test.txt  requirements.txt
threat-service/app/: __init__.py  celery_app.py  config.py  database.py  main.py
threat-service/app/analysis/: __init__.py
threat-service/app/analysis/controllers/: __init__.py  analysis_controller.py
threat-service/app/analysis/models/: __init__.py  analysis.py
threat-service/app/analysis/repositories/: __init__.py  analysis_repository.py
threat-service/app/analysis/routers/: __init__.py  analysis_router.py
threat-service/app/analysis/schemas/: __init__.py  analysis.py
threat-service/app/analysis/services/: __init__.py  analysis_processing_service.py  analysis_service.py
threat-service/app/analysis/tasks/: __init__.py  analysis_tasks.py
threat-service/app/notification/: __init__.py
threat-service/app/tasks/: analysis_tasks.py
threat-service/tests/: __init__.py  conftest.py  test_basic.py  test_celery_app.py  test_config.py  test_main.py
threat-service/tests/notification/: __init__.py
(+243 files in other folders)
