[project]
name = "threat-modeling-ai"
version = "0.1.0"
description = "Threat modeling with YOLO component detection and STRIDE pipeline"
readme = "README.md"
requires-python = ">=3.10"

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [".git", ".venv", "venv", "__pycache__", "build", "dist", "*.egg-info", ".ipynb_checkpoints"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"notebooks/*.ipynb" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
